<resources>
    <string name="app_name">LoginApplication</string>
    <string name="enter_name">Enter Name</string>

    <string name="section_name">CaloSize</string>
    <string name="sex">Sex:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="weight">Weight:</string>
    <string name="in_kilogram">in kilogram</string>
    <string name="height">Height:</string>
    <string name="in_centimeter">in centimeter</string>
    <string name="age">Age:</string>
    <string name="in_years">in years</string>
    <string name="activity">Activity:</string>
    <string name="calculate">CALCULATE</string>
    <string name="clear">CLEAR</string>
    <string name="result">RESULT:</string>
    <string name="this_application_uses_the_harris_benedict_equation_to_determine_the_calorie_intake">This application uses the harris benedict equation to determine the calorie intake.</string>
    <string name="label">calorie per day</string>

    <string-array name="activity">
        <item>Please Select an Item</item>
        <item>Sedentary (little or no exercise)</item>
        <item>Lightly active (light exercise or sports)</item>
        <item>Moderately active (moderate exercise or sports)</item>
        <item>Very active (hard exercise or sports)</item>
        <item>Extra active (very hard exercise or sports and physical job)</item>
    </string-array>
</resources>